# pdfun

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  pyproject.toml  zensical.toml
.github/workflows/: ci.yml  docs.yml
docs/: PARITY.md  architecture.md  css-support.md  getting-started.md  index.md
examples/: hello.py  layout_api.py  render_cobra.py  styled_report.py
src/: base64.rs  box_tree.rs  css.rs  dom.rs  font_face.rs  font_metrics.rs  html_render.rs  image.rs  layout.rs  lib.rs  url_fetcher.rs  winansi.rs
src/pdfun/: __init__.py  _core.pyi  cli.py  html.py  toc.py
tests/: _pdf_helpers.py  _visual_diff.py  _visual_report.py  test_cli.py  test_html.py  test_http_fetch.py  test_pdfun.py  test_text_runs.py  test_visual.py
tests/fixtures/: OFL.txt  README.md
tests/fixtures/cobra/: cobra_notice.html  render.py
tests/visual/: border_radius.html  columns.html  float_left.html  float_right.html  heading_sizes.html  inline_styles.html  list_styles.html  margin_collapse_parent_child.html  margin_collapse_siblings.html  nested_containers.html  opacity.html  padding_border.html  page_break.html  rgba_overlap.html  table_layout.html  text_align.html  tolerances.toml
tests/visual/progressive/: 00_text.html  01_inline_styles.html  02_block_model.html  03_margins_padding.html  04_borders_radius.html  05_floats_clear.html  06_lists.html  07_tables.html  08_multi_page.html  09_backgrounds.html  10_positioning.html  11_at_page.html  12_combined.html
tests/visual/realworld/: arxiv_paper.html  github_readme.html  mdn_article.html
tests/visual/wpt/: box_collapse_empty.html  box_sizing_border_box.html  cascade_inheritance.html  cascade_specificity.html  orphans_widows.html  sel_first_child.html  sel_nth_child.html  sel_pseudo_before.html  text_indent.html  vfmd_line_height.html
tools/: bless_visual_refs.py  build_font_fixture.py  check_fallback_font_license.py  weasyprint.Dockerfile
tools/parity/: __init__.py  catalog.toml  generate.py
