[package]
name = "pdfun"
version = "0.1.0"
edition = "2024"

[lib]
name = "_core"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

[features]
# Bundle DejaVu Sans (~750 KB) as a built-in fallback face so non-WinAnsi
# codepoints (e.g. ☑ U+2611) render even when the document doesn't ship
# its own `@font-face`. Disable with `--no-default-features` to drop the
# embedded bytes from the binary; documents without `@font-face` will then
# fall back to '?' substitution per WS-1A.
default = ["bundled-fallback-font"]
bundled-fallback-font = []

[dependencies]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
# "abi3-py39" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.9
pyo3 = { version = "0.27.1", features = ["extension-module", "abi3-py39"] }
pdf-writer = "0.14.0"
ttf-parser = "0.25"
subsetter = "0.2"
markup5ever_rcdom = "0.38.0"
html5ever = "0.38"
cssparser = "0.37"
png = "0.17"
miniz_oxide = "0.8"
